--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,11 @@
   "orientation": "portrait",
   "background_color": "#f5f5f5",
   "theme_color": "#f5f5f5",
- 
+  "start_url": "https://arcsoftech.github.io/AlexaDiwali/index.html",
   "author": {
     "name": "Arihant Chhajed",
     "twitter": "https://twitter.com/arcsoftech",
     "github": "https://github.com/arcsoftech",
   },
-   "gcm_sender_id": "103953800507"
+  "gcm_sender_id": "103953800507"
 }
