--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "author": {
     "name": "Arihant Chhajed",
     "twitter": "https://twitter.com/arcsoftech",
-    "github": "https://github.com/arcsoftech",
+    "github": "https://github.com/arcsoftech"
   },
   "gcm_sender_id": "103953800507"
 }
